video overlapping issue in mobile view

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -79,3 +79,7 @@ main .embed {
       padding-bottom: 170%;
     }
   }
+
+  .embed-wrapper:has(.smartcrop) {
+    height: 46rem;
+  }
